Docker_airflow_Kafka/logs/dag_id=modeling_dag/run_id=manual__2023-12-27T162929.187240+0000/task_id=load_modeling/attempt=1.log
[2023-12-27T16:29:32.212+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: modeling_dag.load_modeling manual__2023-12-27T16:29:29.187240+00:00 [queued]>
[2023-12-27T16:29:32.218+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: modeling_dag.load_modeling manual__2023-12-27T16:29:29.187240+00:00 [queued]>
[2023-12-27T16:29:32.219+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 1
[2023-12-27T16:29:32.228+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): load_modeling> on 2023-12-27 16:29:29.187240+00:00
[2023-12-27T16:29:32.234+0000] {standard_task_runner.py:57} INFO - Started process 2146 to run task
[2023-12-27T16:29:32.236+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'modeling_dag', 'load_modeling', 'manual__2023-12-27T16:29:29.187240+00:00', '--job-id', '395', '--raw', '--subdir', 'DAGS_FOLDER/modeling.py', '--cfg-path', '/tmp/tmpvisbvbvi']
[2023-12-27T16:29:32.238+0000] {standard_task_runner.py:85} INFO - Job 395: Subtask load_modeling
[2023-12-27T16:29:32.270+0000] {task_command.py:410} INFO - Running <TaskInstance: modeling_dag.load_modeling manual__2023-12-27T16:29:29.187240+00:00 [running]> on host c56b1de7f6cf
[2023-12-27T16:29:32.325+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='modeling_dag' AIRFLOW_CTX_TASK_ID='load_modeling' AIRFLOW_CTX_EXECUTION_DATE='2023-12-27T16:29:29.187240+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-27T16:29:29.187240+00:00'
[2023-12-27T16:29:32.336+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2056, in execute
    cur.execute(*args, **kwargs)
psycopg2.errors.SyntaxError: non-integer constant in ORDER BY
LINE 1: SELECT * FROM kwater ORDER BY 'logTime' DESC LIMIT 1
                                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/modeling.py", line 109, in load_modeling
    df = pd.read_sql(query, conn)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 608, in read_sql
    chunksize=chunksize,
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2116, in read_query
    cursor = self.execute(*args)
  File "/home/airflow/.local/lib/python3.7/site-packages/pandas/io/sql.py", line 2068, in execute
    raise ex from exc
pandas.io.sql.DatabaseError: Execution failed on sql 'SELECT * FROM kwater ORDER BY 'logTime' DESC LIMIT 1': non-integer constant in ORDER BY
LINE 1: SELECT * FROM kwater ORDER BY 'logTime' DESC LIMIT 1
                                      ^

[2023-12-27T16:29:32.345+0000] {taskinstance.py:1350} INFO - Marking task as FAILED. dag_id=modeling_dag, task_id=load_modeling, execution_date=20231227T162929, start_date=20231227T162932, end_date=20231227T162932
[2023-12-27T16:29:32.362+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 395 for task load_modeling (Execution failed on sql 'SELECT * FROM kwater ORDER BY 'logTime' DESC LIMIT 1': non-integer constant in ORDER BY
LINE 1: SELECT * FROM kwater ORDER BY 'logTime' DESC LIMIT 1
                                      ^
; 2146)
[2023-12-27T16:29:32.408+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-12-27T16:29:32.449+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
